Restructuraction for (r,theta) geometry

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(speciesinfo)
 add_subdirectory(paraconfpp)
 add_subdirectory(quadrature)
 add_subdirectory(geometryXVx)
+add_subdirectory(geometryRTheta)
