--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: MIT
 
 add_subdirectory(geometryXVx)
+add_subdirectory(geometryRTheta)
 
-add_subdirectory(polar_poisson)
