Remove empty source file

--- a/src/speciesinfo/CMakeLists.txt
+++ b/src/speciesinfo/CMakeLists.txt
@@ -2,12 +2,12 @@
 
 cmake_minimum_required(VERSION 3.15)
 
-add_library(speciesinfo species_info.cpp)
+add_library(speciesinfo INTERFACE)
 target_include_directories(speciesinfo
-    PUBLIC
+    INTERFACE
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
 )
-target_link_libraries(speciesinfo PUBLIC
+target_link_libraries(speciesinfo INTERFACE
     DDC::DDC
     sll::splines
 )
