--- a/post-process/PythonScripts/gysdata/data_structure_sheath.yaml
+++ b/post-process/PythonScripts/gysdata/data_structure_sheath.yaml
@@ -36,3 +36,27 @@ fdistribu_masses:
 fdistribu_eq:
   dimensions: [ *speciesd , *vxd ]
   path: { file: 'VOICEXX_initstate.h5', dataset: 'fdistribu_eq' }
+
+krook_sink_constant_amplitude:
+  dimensions: [ ]
+  path: { file: 'VOICEXX_initstate.h5', dataset: 'krook_sink_constant_amplitude' }
+
+krook_sink_constant_mask:
+  dimensions: [ *xd ]
+  path: { file: 'VOICEXX_initstate.h5', dataset: 'krook_sink_constant_mask' }
+
+krook_sink_constant_ftarget:
+  dimensions: [ *vxd ]
+  path: { file: 'VOICEXX_initstate.h5', dataset: 'krook_sink_constant_ftarget' }
+
+kinetic_source_amplitude:
+  dimensions: [ ]
+  path: { file: 'VOICEXX_initstate.h5', dataset: 'kinetic_source_amplitude' }
+
+kinetic_source_spatial_extent:
+  dimensions: [ *xd ]
+  path: { file: 'VOICEXX_initstate.h5', dataset: 'kinetic_source_spatial_extent' }
+
+kinetic_source_velocity_shape:
+  dimensions: [ *vxd ]
+  path: { file: 'VOICEXX_initstate.h5', dataset: 'kinetic_source_velocity_shape' }
