--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,3 +8,5 @@ add_subdirectory(paraconfpp)
 add_subdirectory(quadrature)
 add_subdirectory(geometryXVx)
 add_subdirectory(geometryRTheta)
+add_subdirectory(interpolation)
+add_subdirectory(advection)
