Inter species collision operator

--- a/src/geometryXVx/rhs/CMakeLists.txt
+++ b/src/geometryXVx/rhs/CMakeLists.txt
@@ -3,9 +3,10 @@
 foreach(GEOMETRY_VARIANT IN LISTS GEOMETRY_XVx_VARIANTS_LIST)
 
 add_library("rhs_${GEOMETRY_VARIANT}" STATIC
-    kinetic_source.cpp
-    collisions_utils.cpp
+    collisions_inter.cpp
     collisions_intra.cpp
+    collisions_utils.cpp
+    kinetic_source.cpp
     krook_source_adaptive.cpp
     krook_source_constant.cpp
     mask_tanh.cpp
