--- a/tests/geometryXVx/CMakeLists.txt
+++ b/tests/geometryXVx/CMakeLists.txt
@@ -7,6 +7,7 @@ include(GoogleTest)
 foreach(GEOMETRY_VARIANT IN LISTS GEOMETRY_XVx_VARIANTS_LIST)
 
 add_executable(unit_tests_${GEOMETRY_VARIANT}
+    collisions_inter.cpp
     collisions_intra_gridvx.cpp
     collisions_intra_maxwellian.cpp
     fluid_moments.cpp
