--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -22,6 +22,7 @@ jobs:
           cd code_branch
           mkdir build
           cd build
+          cmake -DBUILD_DOCUMENTATION=ON ..
           make doc
           cd ../..
         shell: bash
