--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -75,6 +75,8 @@ jobs:
           git rm *
           cp -r ../build/docs/html .
           git add .
+          git config --global user.name "GitHub CI Documentation builder"
+          git config --global user.email "username@users.noreply.github.com"
           git commit -m "Update docs"
           git push
         shell: bash
