Put back pylint tests
The pylint warnings, comments and remarks were deactivated to prevent pylint errors in MRs which hadn't changed Python files. This was occurring because pylint was updated and the new version added new patterns and removed old patterns (resulting in the configuration file raising warnings). This MR fixes that by pinning pylint to the most recent version (1.17.4). It also fixes the pylint errors which are newly flagged or have been introduced since the pylint warnings were hidden.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,9 +63,9 @@ python_best_practices:
   before_script:
     export PYTHONPATH="./post-process/PythonScripts"
   script: |
-    pylint $(find tests -iname *.py) || pylint-exit --error-fail $?
-    pylint $(find doc -iname *.py) || pylint-exit --error-fail $?
-    pylint post-process/PythonScripts || pylint-exit --error-fail $?
+    pylint $(find tests -iname *.py)
+    pylint $(find doc -iname *.py)
+    pylint post-process/PythonScripts
 ddc_sync:
   only: [ triggers ]
   needs: []
