--- a/.pylintrc
+++ b/.pylintrc
@@ -80,7 +80,6 @@ disable=invalid-name,
         superfluous-parens,
         useless-object-inheritance,
         trailing-newlines,
-        misplaced-comparison-constant,
         unused-argument,
         redefined-outer-name,
         not-callable,
@@ -537,5 +536,5 @@ valid-metaclass-classmethod-first-arg=cls
 
 # Exceptions that will emit a warning when being caught. Defaults to
 # "BaseException, Exception".
-overgeneral-exceptions=BaseException,
-                       Exception
+overgeneral-exceptions=builtins.BaseException,
+                       builtins.Exception
