--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,5 +8,6 @@ add_subdirectory(paraconfpp)
 add_subdirectory(quadrature)
 add_subdirectory(geometryXVx)
 add_subdirectory(geometryRTheta)
+add_subdirectory(geometryXYVxVy)
 add_subdirectory(interpolation)
 add_subdirectory(advection)
