--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,18 +3,25 @@ cmake_tests:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       when: manual
+      changes:
+        - vendor/sll/**/*
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      when: manual
+      variables:
+        SLL_BUILD_TESTING: "OFF"
   stage: test
   needs: []
   image: ghcr.io/gyselax/voicexx_env
   timeout: 2 hours
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
+    SLL_BUILD_TESTING: "ON"
   script: |
     git config --global --add safe.directory /builds/gysela-developpers/voicexx/vendor/kokkos
     rm -rf build || true
     mkdir build
     cd build
-    cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF -DSLL_SPLINES_TEST_DEGREE_MIN=1 -DSLL_SPLINES_TEST_DEGREE_MAX=7 ..
+    cmake -DCMAKE_CXX_FLAGS=-Wall -DSLL_BUILD_TESTING=$SLL_BUILD_TESTING -DBUILD_BENCHMARKS=ON -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF -DSLL_SPLINES_TEST_DEGREE_MIN=1 -DSLL_SPLINES_TEST_DEGREE_MAX=7 ..
     make -j 4
     ctest -j 2 --output-on-failure --timeout 5 -LE test_on_Release_only --output-junit tests.xml
   artifacts:
@@ -26,19 +33,26 @@ cmake_tests_Release:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       when: manual
+      changes:
+        - vendor/sll/**/*
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      when: manual
+      variables:
+        SLL_BUILD_TESTING: "OFF"
   stage: test
   needs: []
   image: ghcr.io/gyselax/voicexx_env
   timeout: 2 hours
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
+    SLL_BUILD_TESTING: "ON"
   script: |
     set -e
     git config --global --add safe.directory /builds/gysela-developpers/voicexx/vendor/kokkos
     rm -rf build || true
     mkdir build
     cd build
-    cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF -DSLL_SPLINES_TEST_DEGREE_MIN=1 -DSLL_SPLINES_TEST_DEGREE_MAX=7 ..
+    cmake -DCMAKE_CXX_FLAGS=-Wall -DSLL_BUILD_TESTING=$SLL_BUILD_TESTING -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF -DSLL_SPLINES_TEST_DEGREE_MIN=1 -DSLL_SPLINES_TEST_DEGREE_MAX=7 ..
     make -j 4
     ctest -j 2 --output-on-failure --timeout 5 --output-junit tests.xml
     ls ./tests/geometryXVx/landau/fft/growthrate_t0.0to45.0.png
