--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -136,3 +136,4 @@ documentation:
     python3 ci_tools/check_documentation.py pull_diff.txt build/docs/doxygen.log
     git diff origin/${CI_MERGE_REQUEST_TARGET_BRANCH_NAME}..HEAD --no-indent-heuristic --unified=0 --output=pull_new_files.txt --no-color --diff-filter=A
     python3 ci_tools/check_readme_presence.py pull_new_files.txt
+  allow_failure: true
