--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -118,7 +118,7 @@ jobs:
           git add .
           git config --global user.name "GitHub CI Documentation builder"
           git config --global user.email "username@users.noreply.github.com"
-          git commit -m "Update docs"
+          git commit -m "Update docs" || true
           git push
         shell: bash
         env:
