--- a/tests/geometryXVx/CMakeLists.txt
+++ b/tests/geometryXVx/CMakeLists.txt
@@ -49,3 +49,26 @@ target_sources(unit_tests_xnonperiod_vx PRIVATE femnonperiodicpoissonsolver.cpp)
 add_subdirectory(bump_on_tail)
 
 add_subdirectory(landau)
+
+
+
+foreach(GEOMETRY_VARIANT IN LISTS GEOMETRY_XVx_VARIANTS_LIST)
+	add_executable(spline_quadrature_tests_${GEOMETRY_VARIANT}
+	    ../main.cpp
+	    quadrature_spline.cpp
+	)
+	target_compile_features(spline_quadrature_tests_${GEOMETRY_VARIANT} PUBLIC cxx_std_17)
+	target_link_libraries(spline_quadrature_tests_${GEOMETRY_VARIANT}
+	    PUBLIC
+	        DDC::PDI_Wrapper
+	        GTest::gtest
+	        GTest::gmock
+	        paraconf::paraconf
+	        sll::splines
+	        vcx::quadrature
+	        vcx::geometry_${GEOMETRY_VARIANT}
+	)
+	
+	gtest_discover_tests(spline_quadrature_tests_${GEOMETRY_VARIANT}
+	    TEST_SUFFIX "_${GEOMETRY_VARIANT}")
+endforeach()
