Add vector field implementation

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,3 +18,4 @@ gtest_discover_tests(unit_tests_common)
 add_subdirectory(geometryXVx)
 add_subdirectory(geometryXYVxVy)
 add_subdirectory(geometryRTheta)
+add_subdirectory(utils)
