--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,4 +18,5 @@ gtest_discover_tests(unit_tests_common)
 add_subdirectory(geometryXVx)
 add_subdirectory(geometryXYVxVy)
 add_subdirectory(geometryRTheta)
+add_subdirectory(timestepper)
 add_subdirectory(utils)
