--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(geometryRTheta)
 add_subdirectory(geometryXYVxVy)
 add_subdirectory(interpolation)
 add_subdirectory(advection)
+add_subdirectory(timestepper)
