Add Euler and Crank-Nicolson methods

--- a/tests/timestepper/CMakeLists.txt
+++ b/tests/timestepper/CMakeLists.txt
@@ -5,9 +5,13 @@ cmake_minimum_required(VERSION 3.15)
 include(GoogleTest)
 
 add_executable(unit_tests_timestepper
+	euler_1d.cpp
+	crank_nicolson_1d.cpp
     runge_kutta_1d.cpp
     runge_kutta_2d.cpp
     runge_kutta_2d_mixed.cpp
+    euler_2d_mixed.cpp
+    crank_nicolson_2d_mixed.cpp
     ../main.cpp
 )
 target_compile_features(unit_tests_timestepper PUBLIC cxx_std_17)
